Adding pageObjects & tests

--- a/src/test/resources/config.cfg
+++ b/src/test/resources/config.cfg
@@ -1,7 +1,7 @@
 # Timeout setting
 implicitlyWait = 10000
 
-url=http://g5.creditlanka.com/index.php
+url=http://www.savimaga.com/app/index.php
 browser=chrome
-headless=true
+headless=false
 
