--- a/src/test/resources/config.cfg
+++ b/src/test/resources/config.cfg
@@ -1,7 +1,7 @@
 # Timeout setting
 implicitlyWait = 10000
 
-url=http://www.savimaga.com/app/index.php
+url=http://g5.creditlanka.com
 browser=chrome
 headless=false
 
